Name:           hakyll-shortcode
Version:        0.0.1
Cabal-Version:  >= 1.2
License:        GPL2
Author:         Nathan Bloomfield
Synopsis:       A shortcode extension module for Hakyll
Stability:      Experimental
Build-Type:     Simple

Library
  hs-source-dirs:
    src/
  exposed-modules:
    Hakyll.Shortcode,
    Hakyll.Shortcode.Service
  other-modules:
    Hakyll.Shortcode.Parser,
    Hakyll.Shortcode.Validate,
    Hakyll.Shortcode.Render,
    Hakyll.Shortcode.Service.YouTube,
    Hakyll.Shortcode.Types.CommaSep,
    Hakyll.Shortcode.Types.Css_Class_Name,
    Hakyll.Shortcode.Types.Iso_639_1_Language_Code,
    Hakyll.Shortcode.Types.Letters_Numbers_Hyphens_Underscores,
    Hakyll.Shortcode.Types.Natural_Number_Base_10,
    Hakyll.Shortcode.Types.YesNo
  build-depends:
    base,
    regex-posix,
    MissingH,
    blaze-html,
    blaze-markup,
    parsec,
    network-uri,
    split
