Name:           hakyll-shortcode
Description:    WordPress-style shortcodes for the Hakyll static site generator.
Version:        0.0.1
Cabal-Version:  >= 1.10
License:        GPL-3
License-File:   LICENSE
Author:         Nathan Bloomfield
Maintainer:     Nathan Bloomfield
Synopsis:       A shortcode extension module for Hakyll
Stability:      Experimental
Build-Type:     Simple

Library
  hs-source-dirs:
    src/
  exposed-modules:
    Hakyll.Shortcode,
    Hakyll.Shortcode.Service,
    Hakyll.Shortcode.Types,
    Hakyll.Shortcode.Render
  other-modules:
    Hakyll.Shortcode.Parser,
    Hakyll.Shortcode.Validate,
    Hakyll.Shortcode.Service.YouTube,
    Hakyll.Shortcode.Service.GeoGebra,
    Hakyll.Shortcode.Types.CommaSep,
    Hakyll.Shortcode.Types.Css_Class_Name,
    Hakyll.Shortcode.Types.Domain_With_Scheme,
    Hakyll.Shortcode.Types.Hex_Color_Code,
    Hakyll.Shortcode.Types.Iso_639_1_Language_Code,
    Hakyll.Shortcode.Types.Letters_Numbers,
    Hakyll.Shortcode.Types.Letters_Numbers_Hyphens_Underscores,
    Hakyll.Shortcode.Types.Natural_Number_Base_10,
    Hakyll.Shortcode.Types.YesNo
  build-depends:
    base,
    regex-posix,
    MissingH,
    blaze-html,
    blaze-markup,
    parsec,
    network-uri,
    split

Test-Suite hakyll-shortcode-test-suite
  type:
    exitcode-stdio-1.0
  main-is:
    Tests/Main.hs
  hs-source-dirs:
    test/,
    src/
  ghc-options:
    -main-is Tests.Main
    -fforce-recomp
  build-depends:
    base,
    QuickCheck,
    tasty,
    tasty-quickcheck
